kubernetes/overlays/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-stage
  labels:
    environment: stage
