kubernetes/overlays/stage/blog-ui-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-ui
spec:
  selector:
    app: blog-ui
