kubernetes/overlays/stage/postgres-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
