kubernetes/overlays/stage/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana-stage.toastedbytes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
